<resources>
    <string name="app_name">CultureAround</string>
    <string name="logo_desc">Logo</string>
    <string name="input_password">Lozinka</string>
    <string name="input_username">Korisničko ime</string>
    <string name="login_button_text">Prijavi se</string>
    <string name="login">Prijava</string>
    <string name="test_button">Test</string>


    <string name="znamenitost_image" />
    <string name="znamenitost_name">Naziv</string>
    <string name="znamenitost_desc">Opis</string>

    <string name="register_button_text">Registriraj se</string>
    <string name="re_input_name">Ime</string>
    <string name="re_input_prezime">Prezime</string>
    <string name="re_input_username">Korisničko ime</string>
    <string name="re_input_email">E-mail</string>
    <string name="re_input_password">Lozinka</string>
    <string name="re_input_password2">Ponovi lozinku</string>
    <string name="re_ponovi_lozinku">Ponovi lozinku</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="NavRecommended">Preporuke</string>
    <string name="NavFavorites">Favoriti</string>
    <string name="NavHome">Početna</string>
    <string name="NavProfile">Profil</string>
    <string name="NavLocation">Lokacija</string>
    <string name="profileUserPicture">Slika </string>
    <string name="ProfileSurname">Prezime </string>
    <string name="ProfileName">Ime</string>
    <string name="profileUsername">Korisničko ime</string>
    <string name="profileEmail">Email korisnika</string>
    <string name="profileButtonChangeData">Promijeni podatke</string>

    <string name="recenzija_korime">korime</string>
    <string name="recenzija_opis">opis</string>
    <string name="recenzija_ocjena">ocjena</string>
    <string name="korime">Korime</string>
    <string name="korisnik_im">im</string>
    <string name="sveOcjena">sveOcjena</string>
    <string name="unosRecenzije">unosRecenzije</string>
    <string name="input_recenziju">upisiRecenziju</string>
    <string name="upisiRecenzijuBtn">Recenziraj</string>
    <string name="input_ocjena">upisiOcjenu</string>

    <string name="save_changes">Spremi promjene</string>
    <string name="picture_url">Url slike</string>
    <string name="update_preview_picture">Učitaj sliku</string>
    <string name="update_delete_picture">Izbriši sliku</string>
    <string name="recenzije_korisnika">RECENZIJE KORISNIKA</string>
    <string name="bodovi">Bodovi</string>


</resources>
