<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/template">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/logo"
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:src="@drawable/ic_loo"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/app_name"
            android:textSize="40dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/re_ime"
                android:hint="@string/re_input_name"
                android:inputType="text"
                android:background="@drawable/inputs_line"
                android:drawableLeft="@drawable/ic_info_outline_black_24dp"
                android:drawablePadding="10dp"
                style="@style/input"
                />

            <EditText
                android:id="@+id/re_prezime"
                android:hint="@string/re_input_prezime"
                android:inputType="text"
                android:background="@drawable/inputs_line"
                android:drawableLeft="@drawable/ic_info_outline_black_24dp"
                android:drawablePadding="10dp"
                style="@style/input" />

            <EditText
                android:id="@+id/re_email"
                android:hint="@string/re_input_email"
                android:inputType="text"
                android:background="@drawable/inputs_line"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawablePadding="10dp"
                style="@style/input"/>

            <EditText
                android:id="@+id/re_password"
                android:hint="@string/re_input_password"
                android:inputType="textPassword"
                android:background="@drawable/inputs_line"
                android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                android:drawablePadding="10dp"
                style="@style/input"/>

            <EditText
                android:id="@+id/re_password2"
                android:hint="@string/re_ponovi_lozinku"
                android:inputType="textPassword"
                android:background="@drawable/inputs_line"
                android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                android:drawablePadding="10dp"
                style="@style/input"/>
            <Button
                android:id="@+id/register_button"
                android:text= "@string/register_button_text"
                style="@style/YellowButton"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>