<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="5dp"
    android:foreground="?android:selectableItemBackground">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <ImageButton
            android:id="@+id/favoritesButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginStart="7dp"
            android:layout_weight=".3"
            android:background="@null"
            android:src="@drawable/favorite_button_styles" />

        <ImageView
            android:id="@+id/znamenitost_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/znamenitost_image"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/znamenitost_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/znamenitost_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textIsSelectable="false"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="5dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/znamenitost_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/znamenitost_desc"
            android:textAppearance="@style/TextAppearance.Compat.Notification"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>