<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:background="@color/colorPrimary"
        android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="130dp" />

    <ImageView
        android:id="@+id/logoutBtn"
        android:layout_width="91dp"
        android:layout_height="31dp"
        android:layout_gravity="right"
        android:layout_marginLeft="350dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/logout" />


    <ImageView
        android:id="@+id/profile_userPicture"
        android:layout_width="168dp"
        android:layout_height="152dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="117dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/profileUserPicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/profile_name"
        style="@style/profileUserDetails"
        android:layout_width="305dp"
        android:layout_height="29dp"
        android:layout_marginTop="230dp"
        android:background="@drawable/texts_line"
        android:text="@string/ProfileName" />

    <TextView
        android:id="@+id/profile_surname"
        style="@style/profileUserDetails"
        android:layout_width="305dp"
        android:layout_height="29dp"
        android:layout_marginTop="270dp"
        android:background="@drawable/texts_line"
        android:text="@string/ProfileSurname" />

    <TextView
        android:id="@+id/profile_email"
        style="@style/profileUserDetails"
        android:layout_width="305dp"
        android:layout_height="29dp"
        android:layout_marginTop="310dp"
        android:background="@drawable/texts_line"
        android:text="@string/profileEmail" />


    <Button
        android:id="@+id/update_profile"
        style="@style/ButtonProfile"
        android:layout_width="350dp"
        android:layout_height="29dp"
        android:layout_marginTop="360dp"
        android:text="@string/profileButtonChangeData" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-14dp"
        android:layout_marginTop="407dp"
        android:background="@android:color/darker_gray" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="526dp"
        android:layout_marginEnd="3dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/level_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="86dp"
        android:layout_marginTop="574dp"
        android:text="RECENZIJE KORISNIKA"
        android:textColor="#404040"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/slikaGemifikacije"
        android:layout_width="137dp"
        android:layout_height="88dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="417dp"
        android:layout_marginEnd="268dp"
        android:contentDescription="@string/profileUserPicture"
        android:padding="4dp"
        app:srcCompat="@drawable/gamification_avatar" />


    <TextView
        android:id="@+id/level_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="144dp"
        android:layout_marginTop="470dp"
        android:layout_marginBottom="10dp"
        android:text="@string/bodovi"
        android:textColor="#404040"
        android:textSize="20dp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/level_points_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="220dp"
        android:layout_marginTop="470dp"

        android:layout_marginBottom="10dp"
        android:text="bodova"
        android:textColor="#404040"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/level_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="126dp"
        android:layout_marginTop="420dp"
        android:text="Razina 10 - Veteran"
        android:textColor="#404040"
        android:textSize="18dp"
        android:textStyle="bold" />


</RelativeLayout>