<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="5dp"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        >


        <ImageView
            android:id="@+id/korinsnik_image"
            android:layout_centerVertical="true"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/korisnik_im"
            android:src="@mipmap/ic_launcher"
            />

        <TextView
            android:id="@+id/korime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/korinsnik_image"
            android:layout_toRightOf="@+id/korinsnik_image"
            android:layout_marginTop="5dp"
            android:text="@string/korime"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textIsSelectable="false"
            android:textStyle="bold"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/korinsnik_image"
            android:layout_toRightOf="@+id/korinsnik_image"
            android:layout_below="@+id/korime"
            android:id="@+id/recenzija_opis"
            android:text="@string/recenzija_opis"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textIsSelectable="false"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/korinsnik_image"
            android:layout_toRightOf="@+id/korinsnik_image"
            android:layout_below="@+id/recenzija_opis"
            android:id="@+id/textO"
            android:text="Ocjena: "
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textIsSelectable="false"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/textO"
            android:layout_toRightOf="@+id/textO"
            android:layout_below="@+id/recenzija_opis"
            android:id="@+id/recenzija_ocjena"
            android:text="@string/recenzija_ocjena"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textIsSelectable="false"
            />


        <RatingBar
            android:id="@+id/recenzija_ocjena_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/korinsnik_image"
            android:layout_toRightOf="@+id/korinsnik_image"
            android:layout_below="@+id/recenzija_ocjena"
            android:isIndicator="true"
            android:max="5"
            android:numStars="5"
            android:scaleX=".5"
            android:scaleY=".5"
            android:transformPivotX="0dp"
            android:transformPivotY="0dp"
            />

    </RelativeLayout>


</androidx.cardview.widget.CardView>