<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
    tools:context=".PretrazivanjeZnamenitosti.ZnamDetailsActivity">


    <TextView
        android:id="@+id/textNaziv"
        android:layout_width="385dp"
        android:layout_height="35dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:text="Naziv"
        android:textSize="25dp"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />


    <ImageView
        android:id="@+id/imageZnamenitost"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNaziv"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="Adresa:"
        app:layout_constraintStart_toEndOf="@+id/imageZnamenitost"
        app:layout_constraintTop_toBottomOf="@+id/textNaziv" />



    <TextView
        android:id="@+id/textAdresa"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:text="Adresa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textNaziv" />



    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="Opis:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageZnamenitost" />


    <TextView
        android:id="@+id/textOpisZnamenitosti"
        android:layout_width="0dp"
        android:layout_height="133dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:text="Opis:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />





    <TextView
        android:id="@+id/textRecenzija"
        android:layout_width="385dp"
        android:layout_height="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:textSize="20dp"
        android:text="Recenzije korisnika"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textOpisZnamenitosti"/>


    <TextView
        android:id="@+id/textocjena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="15dp"
        android:text="Ocjene korisnika:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRecenzija" />


    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:isIndicator="true"
        android:id="@+id/sveOcjena"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toEndOf="@+id/textocjena"
        app:layout_constraintTop_toBottomOf="@+id/textRecenzija"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaRecenzije"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@color/cardview_light_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sveOcjena"
        />





    <TextView
        android:id="@+id/textNapisi"
        android:layout_width="385dp"
        android:layout_height="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:textSize="20dp"
        android:text="Napišite svoju recenziju:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listaRecenzije"/>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Ocjena:"
        app:layout_constraintStart_toStartOf="@+id/textNapisi"
        app:layout_constraintTop_toBottomOf="@+id/textNapisi" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@+id/textNapisi"
        android:id="@+id/upisiOcjenu"
        android:hint="@string/input_ocjena"

        android:inputType="text"
        android:background="@drawable/inputs_line_black"
        android:drawablePadding="10dp"
        style="@style/input"
        app:layout_constraintStart_toEndOf="@+id/textView4"


        />



    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Opis:"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/upisiRecenziju"
        android:hint="@string/input_recenziju"

        android:inputType="text"
        android:background="@drawable/inputs_line_black"
        android:drawablePadding="10dp"
        style="@style/input"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"


        />


    <Button
        android:id="@+id/upisiRecenzijuBtn"
        style="@style/YellowButton"
        android:layout_marginStart="72dp"
        android:layout_marginTop="56dp"
        android:text="@string/upisiRecenzijuBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upisiRecenziju"/>



</androidx.constraintlayout.widget.ConstraintLayout>